add endps update initiative
